--- a/_data/2022/london/schedule.yml
+++ b/_data/2022/london/schedule.yml
@@ -1,7 +1,6 @@
-- date: All times are in UK local (BST)
-- date: Location for all events is Imperial College Business School
-- date: Exhibition Road, London, UK, SW7 2AZ
-- date: Note - details subject to change (especially in second week)
+- date: "All times are in UK local (BST)"
+- date: "Location for all events is Imperial College Business School, Exhibition Road, London, UK, SW7 2AZ"
+- date: "Details subject to change (especially in second week)"
 
 - date: 2022-06-13
   name: "Introduction and Ethics"
