--- a/_data/2022/amu-law/teaching_assistants.yml
+++ b/_data/2022/amu-law/teaching_assistants.yml
@@ -8,4 +8,4 @@
   
 - name: Mateusz Gruszczynski
   image: /assets/images/mateusz.jpg
-  bio: Mateusz Gruszczynski holds a Bachelor’s degree in Mathematics (specialty in data analysis). He is a master student at the Faculty of Mathematics and Computer Science (of AMU) majoring in Data Analysis and Data Processing. He is currently focusing on his master’s thesis about forecasting exchange rate risk using GARCH models. His interests includes programming and machine learning. He is R-programmer, but he is also familiar with the basics, SQL, and Python.
+  bio: Mateusz Gruszczynski holds a Bachelor’s degree in Mathematics (specialty in data analysis). He is a master student at the Faculty of Mathematics and Computer Science (of AMU) majoring in Data Analysis and Data Processing. He is currently focusing on his master’s thesis about forecasting exchange rate risk using GARCH models. His interests includes programming and machine learning. He is R-programmer, but he is also familiar with the basics of SQL and Python.
