--- a/_data/2022/ndsu/speakers.yml
+++ b/_data/2022/ndsu/speakers.yml
@@ -1,1 +1,7 @@
-- name:
+- name: Kaiping Chen, Ph.D.
+  image: /assets/images/Kaiping Chen Professional Photo.jpg
+  bio: "Kaiping Chen is an Assistant Professor at the University of Wisconsin-Madison’s Department of Life Sciences Communication. She employs data science and machine learning methods as well as interviews to examine how digital media and technologies affect politicians’ accountability to public well-being and how deliberative designs can improve the quality of public discourse on controversial and emerging technologies and mitigate the spread of misinformation. Her work has been supported by the National Science Foundation and appeared in flagship journals across disciplines. As a civic engagement practitioner, Kaiping also helps local governments in US and China implement and analyze innovative practices of engaging citizens throughout policymaking."
+  website: https://www.kaipingchen.com
+  
+  
+  
