Update day 6 and 8 schedule

--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -186,15 +186,16 @@
 - date: 2022-06-27
   name: "Day 6: Work on group projects"
   events:
-    - name: "10:00 - 10:15 Logistics and Research Speed Dating Logistics (*Zoom*)"
-    - name: "10:15 - 10:45 Break"
-    - name: "10:45 - 11:45 Round 1-6 (ten minutes each) (*Zoom*)"
-    - name: "11:45 - 12:00 Break"
+    - name: "Mathematica TAs are available via email for consultation (please see Slack)"
+    - name: '10:00 - 11:30 SICSS-Africa + African Descendents Inaugural Joint Panel: "Interrogating Data Collection Methods Focused on African and African Descendents Around the World: Problems, Realities, And Future Opportunities" (*Zoom*)'
+    - name: "11:30 - 11:45 Break"
+    - name: "11:45 - 12:00 Logistics and Research Speed Dating Logistics (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*)"
-    - name: "1:00 - 2:30 Break"
-    - name: "2:30 - 3:30 Round 7-12 (*Zoom*)"
-    - name: "3:30 - 3:45 Break"
-    - name: "3:45 - 4:00 Group debrief (join research teams) (*Zoom*)"
+    - name: "1:00 - 2:00 Round 1-6 (ten minutes each) (*Zoom*)"
+    - name: "2:00 - 2:15 Break"
+    - name: "2:15 - 3:15 Round 7-12 (*Zoom*)"
+    - name: "3:15 - 3:30 Break"
+    - name: "3:30 - 4:00 Group debrief (join research teams) (*Zoom*)"
     - name: "4:00 - 5:30 Guest Speaker TBA: live session to include Q&A and office hour (*Zoom*)"
     
   
@@ -217,7 +218,7 @@
     - name: "10:30 - 12:00 Work on group projects (*Zoom*)"
     - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom*)"
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: "4:00 - 5:30 Guest Speaker TBA: live session to include Q&A and office hour (*Zoom*)"
+    - name: '4:00 - 5:30 Kyla McMullen, Ph.D., Assistant Professor Director, University of Florida "Using Uncommon data to understand society and its people": live session to include Q&A and office hour (*Zoom*)'
 
 
 - date: 2022-06-30
