--- a/_data/2022/odissei/schedule.yml
+++ b/_data/2022/odissei/schedule.yml
@@ -1,3 +1,4 @@
-- date: June 14, 2022
+- date: 2022-06-20
+  name: Introduction to SICSS-ODISSEI
   events:
-    - name: "Schedule coming soon..."
+    - name: "On the first day there will be an introduction to ODISSEI and its various elements including Microdata Services at Statistics Netherlands, the ODISSEI Secure Supercomputer, the LISS Panel, the ODISSEI portal and the various data collections that ODISSEI supports. The day will include a range of practical, hands-on exercises using the various services, getting participants acquainted with the Dutch data landscape, and how ODISSEI supports computational social science. "
