--- a/_data/2022/ndsu/speakers.yml
+++ b/_data/2022/ndsu/speakers.yml
@@ -3,5 +3,8 @@
   bio: "Kaiping Chen is an Assistant Professor at the University of Wisconsin-Madison’s Department of Life Sciences Communication. She employs data science and machine learning methods as well as interviews to examine how digital media and technologies affect politicians’ accountability to public well-being and how deliberative designs can improve the quality of public discourse on controversial and emerging technologies and mitigate the spread of misinformation. Her work has been supported by the National Science Foundation and appeared in flagship journals across disciplines. As a civic engagement practitioner, Kaiping also helps local governments in US and China implement and analyze innovative practices of engaging citizens throughout policymaking."
   website: https://www.kaipingchen.com
   
-  
+- name: Saif Shahin, Ph.D.
+  image: /assets/images/saifshahin.png
+  bio: "Saif Shahin is an Assistant Professor of Digital Culture at Tilburg University in the Netherlands. His scholarship looks at data and technology as sociocultural phenomena, power in digital social networks, and the politics of online identity construction. He regularly employs computational methods in his research, including natural language processing, topic modeling, sentiment analysis, and network analysis — often in conjunction with qualitative techniques. His award-winning research has been featured in flagship journals in communication, sociology, and systems science. He also serves as Associate Editor of the Journal of Information Technology & Politics."
+  website: https://saifshahin.wordpress.com
   
