--- a/_data/2022/odissei/schedule.yml
+++ b/_data/2022/odissei/schedule.yml
@@ -2,7 +2,7 @@
   name: "Introduction to SICSS-ODISSEI"
   events:
     - name: "On the first day there will be an introduction to ODISSEI and its various elements including Microdata Services at Statistics Netherlands, the ODISSEI Secure Supercomputer, the LISS Panel, the ODISSEI portal and the various data collections that ODISSEI supports. The day will include a range of practical, hands-on exercises using the various services, getting participants acquainted with the Dutch data landscape, and how ODISSEI supports computational social science. 
-    - name: "Speaker: by [Dr. Tom Emery](https://www.eur.nl/people/tom-emery)"
+    - name: "Speaker: [Dr. Tom Emery](https://www.eur.nl/people/tom-emery)"
     - name: "On Monday, the participants will also have a collective dinner nearby to get to know each other. This welcome dinner will end around 21.00h, for those who need to travel back home."
 
 - date: Tuesday June 21, 2022
