--- a/_data/2022/odissei/schedule.yml
+++ b/_data/2022/odissei/schedule.yml
@@ -1,7 +1,7 @@
 - date: Monday June 20, 2022
   name: "Introduction to SICSS-ODISSEI"
   events:
-    - name: "On the first day there will be an introduction to ODISSEI and its various elements including Microdata Services at Statistics Netherlands, the ODISSEI Secure Supercomputer, the LISS Panel, the ODISSEI portal and the various data collections that ODISSEI supports. The day will include a range of practical, hands-on exercises using the various services, getting participants acquainted with the Dutch data landscape, and how ODISSEI supports computational social science. 
+    - name: "On the first day there will be an introduction to ODISSEI and its various elements including Microdata Services at Statistics Netherlands, the ODISSEI Secure Supercomputer, the LISS Panel, the ODISSEI portal and the various data collections that ODISSEI supports. The day will include a range of practical, hands-on exercises using the various services, getting participants acquainted with the Dutch data landscape, and how ODISSEI supports computational social science."
     - name: "Speaker: [Dr. Tom Emery](https://www.eur.nl/people/tom-emery)"
     - name: "On Monday, the participants will also have a collective dinner nearby to get to know each other. This welcome dinner will end around 21.00h, for those who need to travel back home."
 
@@ -33,4 +33,4 @@
 - date: "Second week: Monday June 27 to Friday July 1"
   name: "Benchmarking challenge"
   event:
-    - name: "In the second week of the summer school, participants will be able to make full use of the ODISSEI infrastructure through a full scale benchmarking challenge, during which they will be put into teams and challenged to work on and submit solutions to a real-life prediction problem that social scientists and policy makers are grappling with. An example topic would be to predict educational or labour market outcomes. For an example of such a social science benchmark that was organised a few years ago see the Fragile Families Challenge in the onboarding reading. "
+    - name: "In the second week of the summer school, participants will be able to make full use of the ODISSEI infrastructure through a full scale benchmarking challenge, during which they will be put into teams and challenged to work on and submit solutions to a real-life prediction problem that social scientists and policy makers are grappling with. An example topic would be to predict educational or labour market outcomes. For an example of such a social science benchmark that was organised a few years ago see the Fragile Families Challenge in the onboarding reading."
