--- a/_data/2022/odissei/schedule.yml
+++ b/_data/2022/odissei/schedule.yml
@@ -30,7 +30,7 @@
   events:
     - name: "On the last day of the first week, a benchmarking workshop will be held, during which the students will be introduced to the concept of benchmarking and how this could be used in Social Sciences. The second part of the workshop will consist of a hands-on exercise, in which students will be given a simple prediction task (i.e., predicting a life outcome based on publicly available survey data) and will see how their proposed methods can be compared and assessed given a set of pre-defined matrices and criteria."
     - name: "Speaker: [dr. Paulina Pankowska](https://research.vu.nl/en/persons/paulina-karolina-pankowska)"
-    - name: "On Friday, the participants will have a social event and dinner together nearby. There is also the possibility of drinks afterward, for those who are interested."
+    - name: "On Friday June 24, the participants will have a social event and dinner together nearby. There is also the possibility of drinks afterward, for those who are interested."
     
 - date: Saturday June 25, 2022
   name: "Day off"   
@@ -40,7 +40,7 @@
 
 - date: Week 2
   name: "Benchmarking challenge"
-  event:
+  events:
     - name: "In the second week of the summer school (June 27-July 1), participants will be able to make full use of the ODISSEI infrastructure through a full scale benchmarking challenge, during which they will be put into teams and challenged to work on and submit solutions to a real-life prediction problem that social scientists and policy makers are grappling with. An example topic would be to predict educational or labour market outcomes. For an example of such a social science benchmark that was organised a few years ago see the Fragile Families Challenge in the onboarding reading."
     
 - date: Monday June 27, 2022
@@ -57,5 +57,5 @@
   
 - date: Friday July 1, 2022
   name: "Benchmarking challenge"
-  event:
+  events:
     - name: "On Friday 1 July, SICSS-ODISSEI will provide the participants with a closing dinner and drinks, for those who are interested."
