add profile of chaewon yun

--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -16,3 +16,8 @@
   image: /assests/images/jan_sodoge.jpg
   bio: "Jan Sodoge is a doctoral researcher at the Helmholtz-Centre for Environmental Research working on the socio-economic dimensions of drought through text mining and participatory modeling"
   website: http://jsodoge.eu
+
+- name: Chaewon Yun
+  image: /assets/images/chaewon_yun.jpeg
+  bio: "Chaewon Yun is a master’s student in Computational Social Systems in RWTH Aachen. She worked as a software engineer in Samsung Electronics after studying Political Science and International Relations at Yonsei University. Current research interests include the impact of learning algorithms and building democratic community in digital space."
+  website: https://twitter.com/chaew0nyun
