--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -207,7 +207,7 @@
     - name: "10:15 - 12:00 Work on group projects (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*)"
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: "4:00 - 5:30 Guest Speaker TBA: live session to include Q&A and office hour (*Zoom*)"
+    - name: '4:00 - 5:30 Brandeis Marshall, Ph.D., Professor, Spelman University, "Data Conscience: Algorithmic Siege on Our Humanity" - LIVE session to include Q&A and office hour (*Zoom*)'
     
     
 - date: 2022-06-29
@@ -218,7 +218,7 @@
     - name: "10:30 - 12:00 Work on group projects (*Zoom*)"
     - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom*)"
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: '4:00 - 5:30 Kyla McMullen, Ph.D., Assistant Professor Director, University of Florida "Using Uncommon data to understand society and its people": live session to include Q&A and office hour (*Zoom*)'
+    - name: '4:00 - 5:30 Kyla McMullen, Ph.D., Assistant Professor, University of Florida, "Using Uncommon data to understand society and its people" - LIVE session to include Q&A and office hour (*Zoom*)'
 
 
 - date: 2022-06-30
@@ -229,7 +229,7 @@
     - name: "10:30 - 12:00 Work on group projects (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*)"
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: "4:00 - 5:30 Guest Speaker TBA: live session to include Q&A and office hour (*Zoom*)"
+    - name: "4:00 - 5:30 Shawndra Hill, Ph.D., Senior lecturer, Columbia Business School & Principal Scientist at Facebook in the Core Data Science Team, (Title TBA) - LIVE session to include Q&A and office hour (*Zoom*)"
     
 
 - date: 2022-07-01
