--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -27,10 +27,20 @@ closing:
 speakers: 
   title: Guest Speakers 
   people:
-    - name: Kyla McMullen, Ph.D.
+    - name: Kyla McMullen
       image: /assets/images/Kyla_McMullen.png
       bio: "Dr. Kyla McMullen earned her Bachelor of Science in Computer Science from the University of Maryland, Baltimore County (UMBC), where she was also a Meyerhoff Scholar.  She earned her Masters and Ph.D. degrees in Computer Science and Engineering from the University of Michigan (2007-2012)."
       website: http://kylamcmullen.com/
+      
+    - name: Brandeis Marshall, Ph.D.
+      image: /assets/images/Brandeis_Marshall.jpg
+      bio: "Brandeis teaches, speaks and writes about the impact of data practices on technology and society. Her work contributes to the data engineering, data science, and data/computer science education fields. Through Dr. Marshall’s data education firm DataedX, she guides current tech workers in building data equity skills. Her first book, Data Conscience: Algorithmic Siege on our Humanity, is expected to be released later in 2022. It unearths the interlocking computational and civic implications of data on digital processes, structures and institutions. Dr. Marshall holds a Ph.D. and Master of Science in Computer Science from Rensselaer Polytechnic Institute and a Bachelor of Science in Computer Science from the University of Rochester. She is on sabbatical leave from Spelman College, where she is a Full Professor of Computer Science."
+      website: https://www.brandeismarshall.com/ 
+
+    - name: Shawndra Hill
+      image: /assets/images/Shawndra_Hill.jpeg
+      bio: "Dr. Shawndra Hill joined the Marketing Division at Columbia Business School as a part-time senior lecturer in September 2020. She received her PhD and MPhil in Information Systems from NYU's Stern School of Business in 2007 and 2003 respectively, and her BS in Mathematics from Spelman College and her BEE in Electrical Engineering from Georgia Institute of Technology  in 1995.  Presently, Shawndra Hill is also a Principal Scientist at Facebook in the Core Data Science Team in NYC. Prior to joining Facebook, she was (Senior) Principal Researcher at Microsoft Research in NYC and a professor in the Operations and Information Management Department at the Wharton School of the University of Pennsylvania. Broadly, she studies data mining, machine learning and statistical relational learning and their alignment with business problems. Specifically, she researches the value to companies of mining data on how consumers interact with each other on online platforms — for targeted marketing, advertising, health and fraud detection purposes. Her current research focuses on cross channel advertising and the resulting interactions between TV content and online (ad click) behaviors. Her past and present industry partners include AT&T Labs Research, ClearForest, and Siemens Energy & Automation."
+      website: https://www8.gsb.columbia.edu/cbs-directory/detail/sbh2146
 
 roundtable discussions:
   title: '"Real Talk" Roundtable Discussions'
