--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -54,6 +54,8 @@
     - <a href='https://doi.org/10.1108/MF-12-2021-0598' target='_blank'>Can a 280-character message explain stock returns? Evidence from South Africa</a>
     
     - <a href='https://doi.org/10.1007/978-3-030-93409-5_12' target='_blank'>Characterising different communities of Twitter users: Migrants and Natives</a>
+    
+    - <a href='https://journals.sagepub.com/doi/full/10.1177/08944393211019571' target='_blank'>Twitter-Mediated Enterprise–Customer Communication: Case of Electricity Distribution Services in a Developing Country</a>
 
     - <a href='https://doi.org/10.2196/22916' target='_blank'>Systematic delineation of media polarity on COVID-19 vaccines in Africa: Computational Linguistic Modeling Study</a>"
     
