--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -77,7 +77,7 @@
                
                - Inside an Initiative to Diversify the Field of Computational Social Science, [On the Evidence: A Mathematica Podcast](https://www.mathematica.org/blogs/inside-an-initiative-to-diversify-the-field-of-computational-social-science)
                
-               - A lack of diversity in research and analytics is not just unethical — it is dangerous by Wayne A.I. Frederick and Paul Decker, [Heckinger Report OP-ED](https://hechingerreport.org/opinion-a-lack-of-diversity-in-research-and-analytics-is-not-just-unethical-it-is-dangerous/)
+               - A lack of diversity in research and analytics is not just unethical — it is dangerous by Wayne A.I. Frederick and Paul Decker, [Hechinger Report OP-ED](https://hechingerreport.org/opinion-a-lack-of-diversity-in-research-and-analytics-is-not-just-unethical-it-is-dangerous/)
                
                - Reimagining Social Institutions: Higher Education, an SSRC and SAGE publishing panel moderated by Alondra Nelson, Ph.D. [(video)](https://youtu.be/PdsdS4wnaG4)
 
@@ -141,7 +141,7 @@
     - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
     - name: "10:15 - 11:30 Extract Features from Tweets (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 TBA"        
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"        
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:30 Predict Features of Tweets associated with Retweets and Produce Visualization (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
