--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -202,7 +202,7 @@
     - name: "2:15 - 3:15 Round 7-12 (*Zoom*)"
     - name: "3:15 - 3:30 Break"
     - name: "3:30 - 4:00 Group debrief (join research teams) (*Zoom*)"
-    - name: "4:00 - 5:30 Guest Speaker TBA: live session to include Q&A and office hour (*Zoom*)"
+    - name: '4:00 - 5:30 Karen Levy, Ph.D., Assistant Professor, Information Sciences, Cornell University, "Robotruckers: The Double Threat of AI for Low-Wage Work" - LIVE session to include Q&A and office hour (*Zoom*)'
     
   
 - date: 2022-06-28
@@ -213,7 +213,7 @@
     - name: "10:15 - 12:00 Work on group projects (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*)"
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: '4:00 - 5:30 Brandeis Marshall, Ph.D., Professor, Spelman University, "Data Conscience: Algorithmic Siege on Our Humanity" - LIVE session to include Q&A and office hour (*Zoom*)'
+    - name: '4:00 - 5:30 Brandeis Marshall, Ph.D., Professor, Computer Science, Spelman University, "Data Conscience: Algorithmic Siege on Our Humanity" - LIVE session to include Q&A and office hour (*Zoom*)'
     
     
 - date: 2022-06-29
@@ -235,7 +235,7 @@
         - Speaker TBA"
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: '4:00 - 5:30 Kyla McMullen, Ph.D., Assistant Professor, University of Florida, "Using Uncommon data to understand society and its people" - LIVE session to include Q&A and office hour (*Zoom*)'
+    - name: '4:00 - 5:30 Kyla McMullen, Ph.D., Assistant Professor, Computer Science, University of Florida, "Using Uncommon data to understand society and its people" - LIVE session to include Q&A and office hour (*Zoom*)'
 
 
 - date: 2022-06-30
@@ -246,7 +246,7 @@
     - name: "10:30 - 12:00 Work on group projects (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk (encouraged) (*Zoom*)"
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: "4:00 - 5:30 Shawndra Hill, Ph.D., Senior lecturer, Columbia Business School & Principal Scientist at Facebook in the Core Data Science Team, (Title TBA) - LIVE session to include Q&A and office hour (*Zoom*)"
+    - name: "4:00 - 5:30 Shawndra Hill, Ph.D., Senior lecturer, Marketing, Columbia Business School & Principal Scientist at Facebook in the Core Data Science Team, (Title TBA) - LIVE session to include Q&A and office hour (*Zoom*)"
     
 
 - date: 2022-07-01
