--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -2,3 +2,10 @@
   image: /assets/images/MattiNelimarkka.jpeg
   bio: "Matti Nelimarkka leads the Helsinki Social Computing Group, an interdisciplinary group examining both computers and society. They explore digital democracy and politics in the digital era as well as computational techniques in social sciences, especially workflows and connections between social science theories and code. He is affiliated with the Faculty of Social Science, University of Helsinki, Department of Computer Science, Aalto University and Futurice, a Finnish software consultancy. He is about to publish a new computational social science text book Coding Social Science via SAGE Publishing."
   website: http://me.mante.li
+
+
+
+- name: Jan Sodoge
+  image: /assests/images/jan_sodoge.jpg
+  bio: "Jan Sodoge is a doctoral researcher at the Helmholtz-Centre for Environmental Research working on the socio-economic dimensions of drought through text mining and participatory modeling"
+  website: http://jsodoge.eu
