--- a/_data/2022/london/schedule.yml
+++ b/_data/2022/london/schedule.yml
@@ -86,8 +86,9 @@
     - name: "10:00 - 11:00 Group Project Breakouts"
     - name: "11:00 - 12:00 Student-led methods tutorials (encouraged) "
     - name: "12:00 - 1:00  Break for Lunch (provided)"
-    - name: "1:00  - 3:00  Group Project Breakouts"
-    - name: "3:00  - 5:00  Guest Keynote Seminar"
+    - name: "1:00  - 2:00  Group Project Breakouts"
+    - name: "2:00  - 4:00  Guest Keynote Seminar - Alex Sutherland"
+    - name: "4:00  - 5:00  Group Project Breakouts"
 
 - date: 2022-06-23
   name: "Group Project Work (Lead by Profs. Yeomans & Becker)"
