--- a/_data/2022/atlanta/schedule.yml
+++ b/_data/2022/atlanta/schedule.yml
@@ -9,10 +9,10 @@
   name: Introduction and Ethics
   events:
     - name: "10:00 - 11:00 Introductions & Announcements"
-    - name: "11:00 - 12:00 'Why SICSSS? & Ethics, Pt. 1'"
+    - name: "11:00 - 12:00 Why SICSSS? & Ethics, Pt. 1"
     - name: "12:00 - 1:30 Guest Lecturer & Lunch: TBA"
     - name: "1:30 - 2:30 Ethics, Pt. 2"
-    - name: "2:30 - 4:30 Group Work: Introduction, Work Session & Wrap-up"
+    - name: "2:30 - 4:30 Groups: Introduction, Work Session & Wrap-up"
 
 - date: 2022-06-21
   name: Collecting Digital Trace Data
@@ -21,7 +21,7 @@
     - name: "11:00 - 12:00 Collecting Digital Trace Data"
     - name: "12:00 - 1:00 Introduction to Activity & Lunch"
     - name: "1:00 - 2:00 Guest Lecturer"
-    - name: "2:00 - 4:30 Group Work: Work Session & Wrap-up"
+    - name: "2:00 - 4:30 Groups: Work Session & Wrap-up"
 
 
 - date: 2022-06-22
@@ -30,7 +30,7 @@
     - name: "10:00 - 12:30 Announcments & Guest Lecturer"
     - name: "12:30 - 1:30 Lunch"
     - name: "1:30 - 2:00 Introduction to Activity"
-    - name: "2:00 - 4:30 Group Work: Work Session & Wrap-up"
+    - name: "2:00 - 4:30 Groups: Work Session & Wrap-up"
 
 - date: 2022-06-23
   name: Surveys 
@@ -39,7 +39,7 @@
     - name: "11:30 - 12:00 Survey Launch"
     - name: "12:00 - 1:30 Guest Lecturer & Lunch"
     - name: "1:30 - 2:00 Surveys, Pt. 2"
-    - name: "2:00 - 4:30 Group Work: Work Session & Wrap-up"
+    - name: "2:00 - 4:30 Groups: Work Session & Wrap-up"
 
 - date: 2022-06-24
   name: Mass Collaboration & Experiments
@@ -57,18 +57,19 @@
   name: Day off
 
 - date: 2022-06-27
-  name: Group Projects
+  events:
+    - name: "10:00 - 11:30 Announcements & Guest Lecture"
+    - name: "11:30 - 1:00 Lunch"
+    - name: "1:00 - 4:30 Group Project Work"
 
 - date: 2022-06-28
-  name: Group Projects
+  name: Group Project Work
   
 - date: 2022-06-29
-  name: Group Projects
+  name: Group Project Work
   
 - date: 2022-06-30
-  name: Group Projects
-
-- date: 2022-07-01
   name: Project Presentations
   events:
-    - name: "10:00 - 2:00 Presentations & Farewell"
+    - name: "2:00 - 4:30 Presentations & Farewell"
+  
