--- a/_data/2022/covenant-university/sidebar.yml
+++ b/_data/2022/covenant-university/sidebar.yml
@@ -1,7 +1,9 @@
 - name: Apply
   url: "apply"
-- name: Pre-arrival
+- name: Info
   url: "pre_arrival"
+- name: Pre-arrival
+  url: "coding_bootcamp"
 - name: Travel
   url: "travel"
 - name: People
