--- a/_data/2022/covenant-university/coding_bootcamp.yml
+++ b/_data/2022/covenant-university/coding_bootcamp.yml
@@ -1,56 +1,10 @@
-- date: 2022-06-19
-  events:
-    - name: "**09:00-18:00** Arrivals"
-    - name: "**18:00-** Welcome Dinner"
-
-- date: 2022-06-20
-  events:
-    - name: "**09:00-11:00** Opening Ceremony"
-    - name: "**11:00-12:15** Introduction to Computational Social Science<br/>"
-    - name: "**12:15-13:00** Panel Discussion <br/> Computer Science meets Social science"
-    - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Invited Presentations"
-    - name: "**15:30-18:00** Logistics and AOB"
-    - name: "**18:00-** Dinner"
-    - name: "Required Readings:_ []()"  
-
-- date: 2022-06-21
-  events:
-    - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-10:30** Research Happy Hour
-    <br/> 
-    <br/> 
-    Required Readings:
-    
-    - <a href='https://www.pnas.org/doi/abs/10.1073/pnas.2119373119' target='_blank'>North and South: Naming practices and the hidden dimension of global disparities in knowledge production</a>
-    
-    - <a href='https://doi.org/10.48550/arXiv.1907.13414' target='_blank'>The demography of the peripatetic researcher: Evidence on highly mobile scholars from the Web of Science</a>
-    
-    - <a href='https://doi.org/10.1186/s12889-018-5689-x' target='_blank'>Bibliometric analysis of global migration health research in peer-reviewed literature (2000–2016)</a>
-    
-    - <a href='http://dx.doi.org/10.1136/bmjgh-2021-005690' target='_blank'>A bibliometric analysis of COVID-19 research in Africa</a>
-    
-    - <a href='https://doi.org/10.1186/1741-7015-11-66' target='_blank'>A bibliometric analysis of childhood immunization research productivity in Africa since the onset of the Expanded Program on Immunization in 1974</a>"
-    
-    - name: "**10:30-12:00** North and South: *Naming practices and the hidden dimension of global disparities in knowledge production.*
+- date: Week One | 2022-06-20
+  events:  
+    - name: "Introduction to R Programming.*
     <br/> 
     <br/> 
     Contemporary social sciences aim to be diverse and inclusive, yet traces of historical supremacy persist in scientific practices. One such practice is geographical references in article titles. This presentation will highlight important North-South gaps in knowledge production using more than half a million social science research articles indexed by Scopus (1996 to 2020)."
-    
-    - name: "**12:00-13:00** Tutorials"
-    - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Tutorial: [Quasi]-automated search strategy development and article screening in R with <a href='https://doi.org/10.1111/2041-210X.13268' target='_blank'>litsearchr</a> and <a href='https://doi.org/10.1002/jrsm.1374' target='_blank'>revtools</a>"
-    - name: "**15:30-18:00** Group Exercises"
-    - name: "**18:00-** Dinner"
-
-- date: 2022-06-22
-  events:
-    - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-10:30** Research Happy Hour
-    <br/> 
-    <br/> 
-    Required Readings:
-    
+     
     - <a href='https://doi.org/10.1108/MF-12-2021-0598' target='_blank'>Can a 280-character message explain stock returns? Evidence from South Africa</a>
     
     - <a href='https://doi.org/10.1007/978-3-030-93409-5_12' target='_blank'>Characterising different communities of Twitter users: Migrants and Natives</a>
@@ -59,26 +13,7 @@
 
     - <a href='https://doi.org/10.2196/22916' target='_blank'>Systematic delineation of media polarity on COVID-19 vaccines in Africa: Computational Linguistic Modeling Study</a>"
     
-    - name: "**10:30-12:00** Can a 280-character message explain stock returns? *Evidence from South Africa.*
-    <br/> 
-    <br/> 
-    The role of investor sentiment in financial markets has been acknowledged in the literature. In particular, previous work suggests that noise traders are often driven by sentiment rather than fundamental information. This presentation will uncover the link between tweet features and market features using 140 South African companies and a dataset of firm-level Twitter messages extracted from Bloomberg from 1 January 2015 to 31 March 2020."
-    
-    - name: "**12:00-13:00** Tutorials
-    
-     - An Introduction to Text Analysis <a href='https://www.youtube.com/watch?v=pLsC4UyzX_U' target='_blank'>Watch video on Youtube</a>, <a href='https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/intro-text-analysis/Rpres/Introduction_to_Text_as%20Data.html' target='_blank'>Slides</a>, <a href='https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/intro-text-analysis/rmarkdown/Introduction_to_Text_Analysis.html' target='_blank'>Annotated Code</a>    
-     
-     - Text Analysis Basics <a href='https://www.youtube.com/watch?v=TAlO-5NJB7I' target='_blank'>Watch video on Youtube</a>, <a href='https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/basic-text-analysis/Rpres/Basic_Text_Analysis.html' target='_blank'>Slides</a>, <a href='https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/basic-text-analysis/rmarkdown/Basic_Text_Analysis_in_R.html' target='_blank'>Annotated Code</a>    
-     
-     - Dictionary-Based Text Analysis <a href='https://www.youtube.com/watch?v=wSIi2ZRKjaE' target='_blank'>Watch video on Youtube</a>, <a href='https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/dictionary-methods/Rpres/Dictionary_Based_Analysis.html' target='_blank'>Slides</a>, <a href='https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/dictionary-methods/rmarkdown/Dictionary-Based_Text_Analysis.html' target='_blank'>Annotated Code</a>    
-     
-     - Topic Models <a href='https://www.youtube.com/watch?v=IUAHUEy1V0Q' target='_blank'>Watch video on Youtube</a>, <a href='https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/topic-modeling/Rpres/Topic_Modeling.html' target='_blank'>Slides</a>, <a href='https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/topic-modeling/rmarkdown/Topic_Modeling.html' target='_blank'>Annotated Code</a>"
-     
-    - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Invited Presentation"
-    - name: "**15:30-18:00** Group Exercises"
-    - name: "**18:00-** Dinner"
-    
+    - name: "Assesment: **10:30-12:00** Can a 280-character message explain stock returns? *Evidence from South Africa.*"    
     
 - date: 2022-06-23
   events:
