--- a/_data/2022/covenant-university/sidebar.yml
+++ b/_data/2022/covenant-university/sidebar.yml
@@ -4,7 +4,7 @@
   url: "travel"
 - name: Pre-arrival
   url: "pre_arrival"
-- name: Coding Bootcamp Schedule
+- name: Bootcamp Schedule
   url: "coding_bootcamp"
 - name: Program Schedule & Materials
   url: "schedule"
