--- a/_data/2022/covenant-university/coding_bootcamp.yml
+++ b/_data/2022/covenant-university/coding_bootcamp.yml
@@ -1,6 +1,6 @@
-- date: Week One - 2022-04-25
+- date: Week One - Introduction to R Programming
   events:  
-    - name: "Introduction to R Programming.*
+    - name: "About the exercise*
     <br/> 
     <br/> 
     Contemporary social sciences aim to be diverse and inclusive, yet traces of historical supremacy persist in scientific practices. One such practice is geographical references in article titles. This presentation will highlight important North-South gaps in knowledge production using more than half a million social science research articles indexed by Scopus (1996 to 2020)."
