--- a/_data/2022/covenant-university/sidebar.yml
+++ b/_data/2022/covenant-university/sidebar.yml
@@ -5,7 +5,7 @@
 - name: Pre-arrival
   url: "pre_arrival"
 - name: Bootcamp Schedule
-  url: "coding_bootcamp"
+  url: "bootcamp"
 - name: Program Schedule & Materials
   url: "schedule"
 - name: People
