--- a/_data/2022/covenant-university/bootcamp.yml
+++ b/_data/2022/covenant-university/bootcamp.yml
@@ -1,9 +1,9 @@
 - date: Week One - Introduction to R Programming
   events:  
-    - name: "About the exercise*
+    - name: "About the exercise
     <br/> 
     <br/> 
-    Contemporary social sciences aim to be diverse and inclusive, yet traces of historical supremacy persist in scientific practices. One such practice is geographical references in article titles. This presentation will highlight important North-South gaps in knowledge production using more than half a million social science research articles indexed by Scopus (1996 to 2020)."
+    Contemporary social sciences aim to be diverse and inclusive, yet traces of historical supremacy persist in scientific practices. One such practice is geographical references in article titles. This presentation will highlight important North-South gaps in knowledge production using more than half a million social science research articles indexed by Scopus (1996 to 2020).
      
     - <a href='https://doi.org/10.1108/MF-12-2021-0598' target='_blank'>Can a 280-character message explain stock returns? Evidence from South Africa</a>
     
@@ -13,84 +13,4 @@
 
     - <a href='https://doi.org/10.2196/22916' target='_blank'>Systematic delineation of media polarity on COVID-19 vaccines in Africa: Computational Linguistic Modeling Study</a>"
     
-    - name: "Assesment: **10:30-12:00** Can a 280-character message explain stock returns? *Evidence from South Africa.*"    
-    
-- date: 2022-06-23
-  events:
-    - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-10:30** Research Happy Hour
-    <br/> 
-    <br/> 
-    Required Readings:
-    
-    - <a href='https://ojs.aaai.org/index.php/ICWSM/article/view/3360' target='_blank'>Using search queries to understand health information needs in Africa</a>
-    
-    - <a href='https://doi.org/10.2196/24425' target='_blank'>COVID-19 misinformation sSpread in eight countries: Exponential growth modeling study</a>
-    
-    - <a href='https://doi.org/10.2196/29819' target='_blank'>Searching for HIV and AIDS health information in South Africa, 2004-2019: Analysis of Google and Wikipedia search trends</a>
-    
-    - <a href='https://doi.org/10.1038/s41467-022-28498-z' target='_blank'>Population-scale dietary interests during the COVID-19 pandemic</a>
-    
-    - <a href='https://doi.org/10.1080/03736245.2021.1901239' target='_blank'>Google trends and water conservation awareness: the internet’s contribution in South Africa</a>"
-    
-    - name: "**10:30-12:00** Introduction to Internet Search Data."
-    - name: "**12:00-13:00** Tutorials"
-    - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Tutorials/Flash Talks"
-    - name: "**15:30-18:00** Group Exercises"
-    - name: "**18:00-** Dinner" 
-
-
-- date: 2022-06-24
-  events:
-    - name: "**09:00-09:15** Housekeeping and Announcements"
-    - name: "**09:15-10:30** Research Happy Hour
-    <br/> 
-    <br/> 
-    Required Readings:
-    
-    - <a href='https://doi.org/10.1371/journal.pone.0250303' target='_blank'>Characterizing low effort responding among young African adults recruited via Facebook advertising</a>
-    
-    - <a href='https://www.sciencedirect.com/science/article/abs/pii/S0378873316300454' target='_blank'>Evaluating sampling biases from third-party reporting as a method for improving survey measures of sensitive behaviors</a>
-    
-    - <a href='https://doi.org/10.1007/s13524-019-00840-z' target='_blank'>Using an online sample to estimate the size of an offline population</a>
-    
-    - <a href='https://doi.org/10.1016/j.ssmph.2021.100836' target='_blank'>A scoping review on the use of machine learning in research on social determinants of health: Trends and research prospects</a>
-    
-    - <a href='https://journals.sagepub.com/doi/abs/10.1177/0886260520960110' target='_blank'>Predicting the vulnerability of women to intimate partner violence in South Africa: Evidence from tree-based machine learning techniques</a>
-    
-    - *YouTube videos:* <a href='https://www.youtube.com/watch?v=j8fJGV17Hcg' target='_blank'>Survey Research in the Digital Age</a>, <a href='https://www.youtube.com/watch?v=SLAi9v5CCnM' target='_blank'>Probability and Non-Probability Sampling</a>, <a href='https://www.youtube.com/watch?v=_vecQs7aB6o' target='_blank'>Combining Surveys and Big Data</a>, <a href='https://www.youtube.com/watch?v=cYyu5Ex0twE' target='_blank'>Moving Beyond Simple Experiments</a>"
-     
-    - name: "**10:30-12:00** Social Survey meets Online Survey || Machine Learning."
-    - name: "**12:00-13:00** Tutorials"
-    - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-15:30** Invited Presentation: Open science and reproducible research in the digital age"
-    - name: "**15:30-18:00** Group Exercises"
-    - name: "**18:00-** Dinner"
-
-
-- date: 2022-06-27
-  events:
-    - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-13:00** Group Exercises"
-    - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-16:30** Group Exercises"
-    - name: "**16:30-18:00** Invited Talk"
-    - name: "**18:00-** Dinner"
-
-- date: 2022-06-28
-  events:
-    - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-13:00** Group Exercises"
-    - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-16:30** Group Exercises"
-    - name: "**16:30-18:00** Invited Talk"
-    - name: "**18:00-** Dinner"
-
-- date: 2022-06-29
-  events:
-    - name: "**09:00-09:15** Housekeeping and Announcements."
-    - name: "**09:15-13:00** Group Exercises"
-    - name: "**13:00-13:15** Break"
-    - name: "**13:15-15:15** Group Exercises"
-    - name: "**15:15-** Closing Dinner and Goodbye."
+    - name: "Assesment: **10:30-12:00** Can a 280-character message explain stock returns? *Evidence from South Africa.*"
